tests/ui/issues/issue-33287.stderr
error: this operation will panic at runtime
  --> $DIR/issue-33287.rs:6:17
   |
LL |     let range = A[1]..;
   |                 ^^^^ index out of bounds: the length is 1 but the index is 1
   |
   = note: `#[deny(unconditional_panic)]` on by default

error: aborting due to previous error

